2024-05-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el: add variants - that end in "hsubs", and that point
	to subtitles in HTML - to many links to videos.

	* eev-videolinks.el (ee-1stclassvideos-info): indicate that the
	video "eevfherel" - or "2020-find-here-links" now has subtitles.

2024-05-12  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (ee-buffer-local-variables): use
	`buffer-local-variables'.

	* eev-tlinks.el (find-subed-mpv-links): new function.

	* eev-testblocks.el (ee-insert-test-subed-vtt-mode): new function.

2024-05-07  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-plinks.el (find-lynx): new function.

	* eev-brxxx.el (brlynx, brlynxl, brlynxd): new functions.

2024-05-05  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-windows-beginner-intro): rewritten.
	(find-emacs-keys-intro): added `M-x kl', `M-x kll', and `M-x kls'.

2024-03-25  Eduardo Ochs  <eduardoochs@gmail.com>

	* eepitch.el (find-eatprocess0, find-eatprocess)
	(eepitch-line-eat, eepitch-eat): new functions.

2024-03-09  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-strange-functions.el (ee-sf-get-sexp-flash)
	(find-strange-function-links): moved the `ee-goto-eol' to
	`find-strange-function-eol-links'.
	(find-strange-function-eol-links): new function.

	* eev-mode.el (eev-mode-map-set): now `M-h M-S' is a variant of
	`M-h M-s' that doesn't move the point to eol.

	* eev-load.el: added a mention to eev-tla - a (require 'eev-tla),
	commented out.

	* eev-kl-here.el: moved all aliases to eev-aliases.el.

	* eev-hydras.el: moved all aliases to eev-aliases.el.

	* eev-kl-here.el (ee-find-libera-linki): new function.

2024-03-08  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-strange-functions-intro): added a section
	about strange functions created by macros.

	* eev-blinks.el (find-eppma): new function.

	* eev-strange-functions.el (ee-sf-1stclassvideo-links): added a
	psne to the variants.
